shared/newton_dynamics/newton.odin


    @(link_name="NewtonCollisionCreateInstance")
    NewtonCollisionCreateInstance :: proc(collision : ^NewtonCollision) -> ^NewtonCollision ---

    @(link_name="NewtonCollisionGetType")
    NewtonCollisionGetType :: proc(collision : ^NewtonCollision) -> i32 ---

    @(link_name="NewtonCollisionIsConvexShape")
    NewtonCollisionIsConvexShape :: proc(collision : ^NewtonCollision) -> i32 ---

    @(link_name="NewtonCollisionIsStaticShape")
    NewtonCollisionIsStaticShape :: proc(collision : ^NewtonCollision) -> i32 ---

    @(link_name="NewtonCollisionSetUserData")
    NewtonCollisionSetUserData :: proc(collision : ^NewtonCollision, userData : rawptr) ---

    @(link_name="NewtonCollisionGetUserData")
    NewtonCollisionGetUserData :: proc(collision : ^NewtonCollision) -> rawptr ---

    @(link_name="NewtonCollisionSetUserID")
    NewtonCollisionSetUserID :: proc(collision : ^NewtonCollision, id : i64) ---

    @(link_name="NewtonCollisionGetUserID")
    NewtonCollisionGetUserID :: proc(collision : ^NewtonCollision) -> i64 ---

    @(link_name="NewtonCollisionGetMaterial")
    NewtonCollisionGetMaterial :: proc(collision : ^NewtonCollision, userData : ^NewtonCollisionMaterial) ---

    @(link_name="NewtonCollisionSetMaterial")
    NewtonCollisionSetMaterial :: proc(collision : ^NewtonCollision, userData : ^NewtonCollisionMaterial) ---

    @(link_name="NewtonCollisionGetSubCollisionHandle")
    NewtonCollisionGetSubCollisionHandle :: proc(collision : ^NewtonCollision) -> rawptr ---

    @(link_name="NewtonCollisionGetParentInstance")
    NewtonCollisionGetParentInstance :: proc(collision : ^NewtonCollision) -> ^NewtonCollision ---

    @(link_name="NewtonCollisionSetMatrix")
    NewtonCollisionSetMatrix :: proc(collision : ^NewtonCollision, matrix4x4 : ^dFloat) ---

    @(link_name="NewtonCollisionGetMatrix")
    NewtonCollisionGetMatrix :: proc(collision : ^NewtonCollision, matrix4x4 : ^dFloat) ---

    @(link_name="NewtonCollisionSetScale")
    NewtonCollisionSetScale :: proc(collision : ^NewtonCollision, scaleX : dFloat, scaleY : dFloat, scaleZ : dFloat) ---

    @(link_name="NewtonCollisionGetScale")
    NewtonCollisionGetScale :: proc(collision : ^NewtonCollision, scaleX : ^dFloat, scaleY : ^dFloat, scaleZ : ^dFloat) ---

    @(link_name="NewtonDestroyCollision")
    NewtonDestroyCollision :: proc(collision : ^NewtonCollision) ---

    @(link_name="NewtonCollisionGetSkinThickness")
    NewtonCollisionGetSkinThickness :: proc(collision : ^NewtonCollision) -> dFloat ---

    @(link_name="NewtonCollisionSetSkinThickness")
    NewtonCollisionSetSkinThickness :: proc(collision : ^NewtonCollision, thickness : dFloat) ---

    @(link_name="NewtonCollisionIntersectionTest")
    NewtonCollisionIntersectionTest :: proc(newtonWorld : ^NewtonWorld, collisionA : ^NewtonCollision, matrixA : ^dFloat, collisionB : ^NewtonCollision, matrixB : ^dFloat, threadIndex : i32) -> i32 ---

    @(link_name="NewtonCollisionPointDistance")
    NewtonCollisionPointDistance :: proc(newtonWorld : ^NewtonWorld, point : ^dFloat, collision : ^NewtonCollision, matrix4x4 : ^dFloat, contact : ^dFloat, normal : ^dFloat, threadIndex : i32) -> i32 ---

    @(link_name="NewtonCollisionClosestPoint")
    NewtonCollisionClosestPoint :: proc(newtonWorld : ^NewtonWorld, collisionA : ^NewtonCollision, matrixA : ^dFloat, collisionB : ^NewtonCollision, matrixB : ^dFloat, contactA : ^dFloat, contactB : ^dFloat, normalAB : ^dFloat, threadIndex : i32) -> i32 ---

    @(link_name="NewtonCollisionCollide")
    NewtonCollisionCollide :: proc(newtonWorld : ^NewtonWorld, maxSize : i32, collisionA : ^NewtonCollision, matrixA : ^dFloat, collisionB : ^NewtonCollision, matrixB : ^dFloat, contacts : ^dFloat, normals : ^dFloat, penetration : ^dFloat, attributeA : ^i64, attributeB : ^i64, threadIndex : i32) -> i32 ---

    @(link_name="NewtonCollisionCollideContinue")
    NewtonCollisionCollideContinue :: proc(newtonWorld : ^NewtonWorld, maxSize : i32, timestep : dFloat, collisionA : ^NewtonCollision, matrixA : ^dFloat, velocA : ^dFloat, omegaA : ^dFloat, collisionB : ^NewtonCollision, matrixB : ^dFloat, velocB : ^dFloat, omegaB : ^dFloat, timeOfImpact : ^dFloat, contacts : ^dFloat, normals : ^dFloat, penetration : ^dFloat, attributeA : ^i64, attributeB : ^i64, threadIndex : i32) -> i32 ---

    @(link_name="NewtonCollisionSupportVertex")
    NewtonCollisionSupportVertex :: proc(collision : ^NewtonCollision, dir : ^dFloat, vertex : ^dFloat) ---

    @(link_name="NewtonCollisionRayCast")
    NewtonCollisionRayCast :: proc(collision : ^NewtonCollision, p0 : ^dFloat, p1 : ^dFloat, normal : ^dFloat, attribute : ^i64) -> dFloat ---

    @(link_name="NewtonCollisionCalculateAABB")
    NewtonCollisionCalculateAABB :: proc(collision : ^NewtonCollision, matrix4x4 : ^dFloat, p0 : ^dFloat, p1 : ^dFloat) ---

    @(link_name="NewtonCollisionForEachPolygonDo")
    NewtonCollisionForEachPolygonDo :: proc(collision : ^NewtonCollision, matrix4x4 : ^dFloat, callback : NewtonCollisionIterator, userData : rawptr) ---

    @(link_name="NewtonCollisionAggregateCreate")
    NewtonCollisionAggregateCreate :: proc(world : ^NewtonWorld) -> rawptr ---

    @(link_name="NewtonCollisionAggregateDestroy")
    NewtonCollisionAggregateDestroy :: proc(aggregate : rawptr) ---

    @(link_name="NewtonCollisionAggregateAddBody")
    NewtonCollisionAggregateAddBody :: proc(aggregate : rawptr, body : ^NewtonBody) ---

    @(link_name="NewtonCollisionAggregateRemoveBody")
    NewtonCollisionAggregateRemoveBody :: proc(aggregate : rawptr, body : ^NewtonBody) ---

    @(link_name="NewtonCollisionAggregateGetSelfCollision")
    NewtonCollisionAggregateGetSelfCollision :: proc(aggregate : rawptr) -> i32 ---

    @(link_name="NewtonCollisionAggregateSetSelfCollision")
    NewtonCollisionAggregateSetSelfCollision :: proc(aggregate : rawptr, state : i32) ---

    @(link_name="NewtonSetEulerAngle")
    NewtonSetEulerAngle :: proc(eulersAngles : ^dFloat, matrix4x4 : ^dFloat) ---

    @(link_name="NewtonGetEulerAngle")
    NewtonGetEulerAngle :: proc(matrix4x4 : ^dFloat, eulersAngles0 : ^dFloat, eulersAngles1 : ^dFloat) ---

    @(link_name="NewtonCalculateSpringDamperAcceleration")
    NewtonCalculateSpringDamperAcceleration :: proc(dt : dFloat, ks : dFloat, x : dFloat, kd : dFloat, s : dFloat) -> dFloat ---

    @(link_name="NewtonCreateDynamicBody")
    NewtonCreateDynamicBody :: proc(newtonWorld : ^NewtonWorld, collision : ^NewtonCollision, matrix4x4 : ^dFloat) -> ^NewtonBody ---

    @(link_name="NewtonCreateKinematicBody")
    NewtonCreateKinematicBody :: proc(newtonWorld : ^NewtonWorld, collision : ^NewtonCollision, matrix4x4 : ^dFloat) -> ^NewtonBody ---

    @(link_name="NewtonCreateAsymetricDynamicBody")
    NewtonCreateAsymetricDynamicBody :: proc(newtonWorld : ^NewtonWorld, collision : ^NewtonCollision, matrix4x4 : ^dFloat) -> ^NewtonBody ---

    @(link_name="NewtonDestroyBody")
    NewtonDestroyBody :: proc(body : ^NewtonBody) ---

    @(link_name="NewtonBodyGetSimulationState")
    NewtonBodyGetSimulationState :: proc(body : ^NewtonBody) -> i32 ---

    @(link_name="NewtonBodySetSimulationState")
    NewtonBodySetSimulationState :: proc(bodyPtr : ^NewtonBody, state : i32) ---

    @(link_name="NewtonBodyGetType")
    NewtonBodyGetType :: proc(body : ^NewtonBody) -> i32 ---

    @(link_name="NewtonBodyGetCollidable")
    NewtonBodyGetCollidable :: proc(body : ^NewtonBody) -> i32 ---

    @(link_name="NewtonBodySetCollidable")
    NewtonBodySetCollidable :: proc(body : ^NewtonBody, collidableState : i32) ---

    @(link_name="NewtonBodyAddForce")
    NewtonBodyAddForce :: proc(body : ^NewtonBody, force : ^dFloat) ---

    @(link_name="NewtonBodyAddTorque")
    NewtonBodyAddTorque :: proc(body : ^NewtonBody, torque : ^dFloat) ---

    @(link_name="NewtonBodySetCentreOfMass")
    NewtonBodySetCentreOfMass :: proc(body : ^NewtonBody, com : ^dFloat) ---

    @(link_name="NewtonBodySetMassMatrix")
    NewtonBodySetMassMatrix :: proc(body : ^NewtonBody, mass : dFloat, Ixx : dFloat, Iyy : dFloat, Izz : dFloat) ---

    @(link_name="NewtonBodySetFullMassMatrix")
    NewtonBodySetFullMassMatrix :: proc(body : ^NewtonBody, mass : dFloat, inertiaMatrix : ^dFloat) ---

    @(link_name="NewtonBodySetMassProperties")
    NewtonBodySetMassProperties :: proc(body : ^NewtonBody, mass : dFloat, collision : ^NewtonCollision) ---

    @(link_name="NewtonBodySetMatrix")
    NewtonBodySetMatrix :: proc(body : ^NewtonBody, matrix4x4 : ^dFloat) ---

    @(link_name="NewtonBodySetMatrixNoSleep")
    NewtonBodySetMatrixNoSleep :: proc(body : ^NewtonBody, matrix4x4 : ^dFloat) ---

    @(link_name="NewtonBodySetMatrixRecursive")
    NewtonBodySetMatrixRecursive :: proc(body : ^NewtonBody, matrix4x4 : ^dFloat) ---

    @(link_name="NewtonBodySetMaterialGroupID")
    NewtonBodySetMaterialGroupID :: proc(body : ^NewtonBody, id : i32) ---

    @(link_name="NewtonBodySetContinuousCollisionMode")
    NewtonBodySetContinuousCollisionMode :: proc(body : ^NewtonBody, state : u32) ---

    @(link_name="NewtonBodySetJointRecursiveCollision")
    NewtonBodySetJointRecursiveCollision :: proc(body : ^NewtonBody, state : u32) ---

    @(link_name="NewtonBodySetOmega")
    NewtonBodySetOmega :: proc(body : ^NewtonBody, omega : ^dFloat) ---

    @(link_name="NewtonBodySetOmegaNoSleep")
    NewtonBodySetOmegaNoSleep :: proc(body : ^NewtonBody, omega : ^dFloat) ---

    @(link_name="NewtonBodySetVelocity")
    NewtonBodySetVelocity :: proc(body : ^NewtonBody, velocity : ^dFloat) ---

    @(link_name="NewtonBodySetVelocityNoSleep")
    NewtonBodySetVelocityNoSleep :: proc(body : ^NewtonBody, velocity : ^dFloat) ---

    @(link_name="NewtonBodySetForce")
    NewtonBodySetForce :: proc(body : ^NewtonBody, force : ^dFloat) ---

    @(link_name="NewtonBodySetTorque")
    NewtonBodySetTorque :: proc(body : ^NewtonBody, torque : ^dFloat) ---

    @(link_name="NewtonBodySetLinearDamping")
    NewtonBodySetLinearDamping :: proc(body : ^NewtonBody, linearDamp : dFloat) ---

    @(link_name="NewtonBodySetAngularDamping")
    NewtonBodySetAngularDamping :: proc(body : ^NewtonBody, angularDamp : ^dFloat) ---

    @(link_name="NewtonBodySetCollision")
    NewtonBodySetCollision :: proc(body : ^NewtonBody, collision : ^NewtonCollision) ---

    @(link_name="NewtonBodySetCollisionScale")
    NewtonBodySetCollisionScale :: proc(body : ^NewtonBody, scaleX : dFloat, scaleY : dFloat, scaleZ : dFloat) ---

    @(link_name="NewtonBodyGetSleepState")
    NewtonBodyGetSleepState :: proc(body : ^NewtonBody) -> i32 ---

    @(link_name="NewtonBodySetSleepState")
    NewtonBodySetSleepState :: proc(body : ^NewtonBody, state : i32) ---

    @(link_name="NewtonBodyGetAutoSleep")
    NewtonBodyGetAutoSleep :: proc(body : ^NewtonBody) -> i32 ---

    @(link_name="NewtonBodySetAutoSleep")
    NewtonBodySetAutoSleep :: proc(body : ^NewtonBody, state : i32) ---

    @(link_name="NewtonBodyGetFreezeState")
    NewtonBodyGetFreezeState :: proc(body : ^NewtonBody) -> i32 ---

    @(link_name="NewtonBodySetFreezeState")
    NewtonBodySetFreezeState :: proc(body : ^NewtonBody, state : i32) ---

    @(link_name="NewtonBodyGetGyroscopicTorque")
    NewtonBodyGetGyroscopicTorque :: proc(body : ^NewtonBody) -> i32 ---

    @(link_name="NewtonBodySetGyroscopicTorque")
    NewtonBodySetGyroscopicTorque :: proc(body : ^NewtonBody, state : i32) ---

    @(link_name="NewtonBodySetDestructorCallback")
    NewtonBodySetDestructorCallback :: proc(body : ^NewtonBody, callback : NewtonBodyDestructor) ---

    @(link_name="NewtonBodyGetDestructorCallback")
    NewtonBodyGetDestructorCallback :: proc(body : ^NewtonBody) -> NewtonBodyDestructor ---

    @(link_name="NewtonBodySetTransformCallback")
    NewtonBodySetTransformCallback :: proc(body : ^NewtonBody, callback : NewtonSetTransform) ---

    @(link_name="NewtonBodyGetTransformCallback")
    NewtonBodyGetTransformCallback :: proc(body : ^NewtonBody) -> NewtonSetTransform ---
